instructions.Instructions.scala.error
Erreur de compilation :
Instructions:2: error: '(' expected but identifier found.
for i in range(3):
    ^