instructions.Instructions.scala.code
baisseBrosse()
for i in range(3):
	gauche()
	avance()
	avance()
avance()
gauche()
leveBrosse()
avance()
